# robots

./: .gitignore  AGENTS.md  CHANGELOG.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: dependabot.yml  llm-input-safety.yml  test-lint.yml
docs/: agents.md  api-reference.md  architecture.md  contracts.md  contributing.md  index.md  mesh.md  recording.md  ros2-integration.md  rtps-integration.md  security.md  troubleshooting.md
docs/assets/: extra.css
docs/data/: annotation.md
docs/examples/: overview.md
docs/getting-started/: installation.md  quickstart.md  robot-factory.md
docs/hardware/: robot-control.md  tools.md
docs/inference/: remote.md
docs/planning/: kinematic_planner.md
docs/policies/: camera-naming.md  cosmos3.md  custom-policies.md  groot.md  lerobot-async.md  lerobot-local.md  molmoact2.md  motionbricks.md  overview.md  remote.md  vera.md  wbc.md  wbc_gait.md
docs/robots/: arms.md  bimanual.md  hands.md  humanoids.md  index.md  mobile.md
docs/simulation/: domain-randomization.md  isaac.md  newton.md  overview.md  world-building.md
docs/stylesheets/: extra.css
docs/training/: managers.md  overview.md  rl.md  vla_workflow.md
examples/: 01_sim_hello_world.py  02_policy_abstraction.py  03_record_dataset.py  04_mesh_peer_discovery.py  05_agent_natural_language.py  06_agent_collect_and_stream.py  07_post_tune_any_policy.py  08_discover_lerobot.py  README.md  cosmos3_sim_rollout.py  lerobot_hardware_catalog.py  mesh_acl_example.json5  mesh_acl_strict_per_peer.json5  molmoact2_sim_pickplace.py  molmoact2_so101_pickplace.py  sim_managers_locomotion.py  sim_managers_locomotion.yaml  train_fastsac_reach.py  train_ppo_reach.py  vla_g1_workflow.py  wbc_g1_composite.py  wbc_g1_gait.py
examples/lerobot/: README.md  hub_to_hardware.ipynb  hub_to_hardware.py
examples/notebooks/: 01_getting_started.ipynb  02_record_and_stream.ipynb  03_record_train_deploy.ipynb  04_discover_lerobot.ipynb  05_streaming_data_loop.ipynb  README.md
examples/planner/: agent_g1.py  keyboard_g1.py  scripted_g1.py
examples/ros2/: turtlebot_demo.py
examples/vera_mimicgen_panda/: README.md  critique_with_cosmos3.py  rollout.py
examples/wbc/: motionbricks_g1_mujoco.py
scripts/: audit_deps.py
strands_robots/: __init__.py  __main__.py  _dyld.py  dataset_recorder.py  doctor.py  hardware_robot.py  hardware_ros_bridge.py  hardware_rtps_bridge.py  robot.py  ros_telemetry.py  streaming_dataset.py  teleop_mixin.py  verify_dataset.py
strands_robots/assets/: download.py  manager.py
strands_robots/device_connect/: GUIDE.md  __init__.py  _authz.py  reachy_mini_driver.py  reachy_transport.py  robot_driver.py  sim_driver.py
strands_robots/inference/: __init__.py  client.py  protocol.py  server.py
strands_robots/mesh/: __init__.py  _acl_config.py  _zenoh_config.py  audit.py  core.py  input.py  ros_bridge.py  security.py  sensors.py  session.py
strands_robots/planning/: __init__.py  base.py  kinematic.py
strands_robots/policies/: __init__.py  base.py  composite.py
strands_robots/registry/: __init__.py  discovery.py  policies.json  policies.py  robots.json  robots.py  user_registry.py
strands_robots/sim_managers/: __init__.py  base.py  config.py
strands_robots/simulation/: __init__.py  base.py  benchmark.py  benchmark_spec.py  builtin_benchmarks.py  factory.py  model_registry.py  models.py  policy_runner.py  predicates.py  recording.py  safe_output.py  terrain.py
strands_robots/tools/: __init__.py  download_assets.py  gr00t_inference.py  lerobot_calibrate.py  lerobot_teleoperate.py  lerobot_train.py  pose_tool.py  robot_mesh.py  run_policy.py  serial_tool.py  train_policy.py  use_lerobot.py  use_ros.py
strands_robots/training/: __init__.py  _validate.py  base.py  groot.py  lerobot.py  reward.py
tests/: test_asset_download.py  test_asset_manager.py  test_changelog_format.py  test_customer_workflow_regressions.py  test_dataset_recorder.py  test_dependency_audit.py  test_device_connect_all_robots.py  test_device_connect_drivers.py  test_device_connect_heartbeat.py  test_docs_policy_coverage.py  test_docstrings_no_dangling_doc_refs.py  test_doctor.py  test_dyld_ffmpeg_shim.py  test_examples_no_lerobot_imports.py  test_examples_sim_embodiment.py  test_hardware_robot_config.py  test_hardware_robot_lifecycle.py  test_hardware_ros_bridge.py  test_hardware_ros_telemetry_and_calibration_migration.py  test_hardware_rtps_bridge.py  test_lerobot_dependency_docs.py  test_lerobot_hardware_conformance.py  test_lerobot_import_surface.py  test_lerobot_install_hints_pypi.py  test_lerobot_train_blocklist.py  test_main_cli.py  test_mypy_untyped_third_party_imports.py  test_no_host_paths.py  test_package_lazy_imports.py  test_reachy_mini_driver.py  test_registry.py  test_registry_integrity.py  test_robot_factory.py  test_robot_mesh_dc_dispatch_errors.py  test_ros_telemetry_command_surface_security.py  test_ros_telemetry_topic_parity.py  test_source_strings_no_emoji.py  test_source_strings_no_review_archaeology.py  test_streaming_dataset.py  test_teleop.py  (+4 more)
tests/inference/: __init__.py  test_policy_server_lifecycle.py  test_protocol.py  test_remote_policy_handshake_contract.py  test_remote_policy_large_observation.py  test_remote_policy_roundtrip.py  test_remote_policy_sim_rollout.py
tests/mesh/: conftest.py  test_acl_config.py  test_acl_example_scoped_subscribe.py  test_acl_permissive_shape_edge_cases.py  test_acl_shape_validation.py  test_audit_log_rotation.py  test_audit_log_symlink_refused.py  test_audit_read_walker_defenses.py  test_audit_seq_persist_durability.py  test_audit_seq_restore_failsoft.py  test_bridge_dedup.py  test_bridge_transport.py  test_camera_acl.py  test_camera_frame_encoding.py  test_camera_schema.py  test_command_handling_survives_audit_failure.py  test_corroboration_clock_domain.py  test_deep_mesh.py  test_default_acl_warning.py  test_device_connect_fallback.py  test_device_rpc_validation_contract.py  test_dispatch_command_routing.py  test_dispatch_policy_host_guard.py  test_docstring_module_xrefs.py  (+55 more)
tests_integ/: test_iot_transport.py
(+368 files in other folders)
