[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-robots"
dynamic = ["version"]
description = "AI-powered robot control, simulation, and training for Strands Agents - integrates with MuJoCo, Isaac Sim, Newton, and many more"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "AWS", email = "opensource@amazon.com"},
]
keywords = [
    "robots", "agents", "strands", "sdk",
    "mujoco", "simulation", "lerobot", "reinforcement-learning",
    "gr00t", "isaac-sim", "vla",
    "robot-learning", "imitation-learning",
    "teleoperation", "manipulation", "strands-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "strands-agents>=1.0.0,<2.0.0",
    "numpy>=1.21.0,<3.0.0",
    "opencv-python-headless>=4.5.0,<5.0.0",
    "Pillow>=8.0.0,<13.0.0",
]

[project.optional-dependencies]
groot-service = [
    "pyzmq>=27.0.0,<28.0.0",
    "msgpack>=1.0.0,<2.0.0",
]
cosmos3-service = [
    # Self-contained msgpack+NumPy WebSocket client for the Cosmos 3 RoboLab
    # policy server (cosmos_framework.scripts.action_policy_server_robolab).
    #
    # No openpi-client dependency: the wire protocol is implemented directly
    # via `websockets` + `msgpack` plus a vendored numpy packer
    # (strands_robots/policies/cosmos3/_msgpack_numpy.py). This keeps the
    # extra numpy-version agnostic so it composes cleanly with `lerobot`
    # (numpy>=2) for dataset recording in the same env.
    "msgpack>=1.0.0,<2.0.0",
    "websockets>=12.0",
]
# In-process Cosmos 3 backend (Cosmos3Policy(backend="diffusers")). Loads the
# Cosmos3OmniPipeline directly via native Hugging Face `diffusers` (no RoboLab
# policy server, no GPU isolation) - one forward pass returns the predicted
# world video + sound + action chunk. This is a HEAVY GPU stack (diffusers +
# torch + transformers); the default backend stays "service", so a plain
# `pip install strands-robots[cosmos3-service]` (msgpack + websockets only) is
# unaffected. diffusers composes with numpy>=2, so this extra is co-installable
# with cosmos3-service and lerobot.
#
# Cosmos3OmniPipeline ships only in diffusers-from-source (>0.38); the version
# floor here is a lower bound, but install the git pin alongside this extra to
# get the Cosmos3OmniPipeline + CosmosActionCondition symbols:
#   uv pip install strands-robots[cosmos3-diffusers] \
#       'diffusers @ git+https://github.com/huggingface/diffusers'
cosmos3-diffusers = [
    "diffusers>=0.30",
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.26",
]
# Cosmos 3 -> MuJoCo sim-loop bridge. The diffusers backend emits the model's
# raw unified action ([-1, 1] quantile-normalized relative end-effector pose,
# not joint radians); turning that into joint targets a MuJoCo arm can track
# needs de-normalization (bundled per-domain q01/q99 stats, pure NumPy) plus an
# inverse-kinematics solve. This extra pulls `mink` (differential IK on the same
# mujoco.MjModel) + `mujoco`. Install it to drive a sim arm with
# Cosmos3Policy(backend="diffusers") via decode_cosmos_chunk_to_targets /
# MinkIKBridge. numpy>=2 compatible (co-installable with cosmos3-diffusers,
# cosmos3-service, sim-mujoco, and lerobot).
cosmos3-sim = [
    "mink>=0.0.4",
    "mujoco>=3.2.0,<4.0.0",
    # qpsolvers QP backend for mink.solve_ik. quadprog is the dependency-light
    # default that is always available; the bridge auto-selects whatever
    # qpsolvers reports (preferring daqp when present).
    "qpsolvers[quadprog]>=4.0.0",
]
# MoveIt2 sidecar client (ROS 2 / moveit_py runs out-of-process; the
# client is a lightweight ZMQ + msgpack peer so users without ROS 2
# sourced are unaffected). See policies/moveit2/server/ for the
# sidecar reference implementation.
moveit2 = [
    "pyzmq>=27.0.0,<28.0.0",
    "msgpack>=1.0.0,<2.0.0",
]
# cuRobo collision-aware motion planning. Runs in-process as a CUDA
# library (no sidecar, unlike MoveIt2). Users without a CUDA-capable GPU
# should not install this extra. See policies/curobo/ for the policy
# wrapper.
#
# IMPORTANT: cuRobo is NOT distributed on PyPI. The package named
# ``nvidia-curobo`` on PyPI is an unrelated v0.1 squatter — installing
# it does not get you a working cuRobo. The real cuRobo is published
# only as source on GitHub at https://github.com/NVlabs/curobo. Users
# must install it from source before using this policy:
#
#   git clone https://github.com/NVlabs/curobo.git
#   pip install -e ./curobo
#
# Once cuRobo's API surface stabilises and a real PyPI release exists,
# this extra will pin to it. Until then, keep the extra empty so
# ``pip install strands-robots[curobo]`` is a no-op rather than a
# silently-broken install of the squatter package. Tracked in the
# follow-up issue linked from PR #306.
curobo = []
# GR00T Whole-Body-Control (SONIC) locomotion policy. Runs the ONNX
# controllers in-process via onnxruntime (no torch, no sidecar) - a light
# extra, like the client side of moveit2. Model weights are NOT bundled;
# they are fetched at runtime under the NVIDIA Open Model License
# (e.g. nvidia/GEAR-SONIC). See policies/wbc/ and issue #466.
wbc = [
    "onnxruntime>=1.17.0,<2.0.0",
    # The upstream GR00T-WBC checkpoint config (g1_gear_wbc.yaml) is YAML;
    # WBCConfig.from_file reads it via pyyaml. JSON configs work without it.
    "pyyaml>=5.1,<7.0.0",
    # Resolving a HuggingFace model id checkpoint (e.g. the default
    # nvidia/GEAR-SONIC, or any "org/repo") downloads it via huggingface_hub.
    # Required so create_policy("wbc") with no local checkpoint works out of the
    # box - WBCPolicy._maybe_download_checkpoint raises RuntimeError naming the
    # [wbc] extra when it is absent.
    # Cap the MAJOR only (<2.0.0): a <1.0.0 cap conflicts with lerobot, which
    # requires huggingface-hub>=1.0.0 - and [wbc] is pulled into [all] alongside
    # lerobot, so the two must co-resolve.
    "huggingface_hub>=0.20.0,<2.0.0",
]
lerobot = [
    # [dataset] bundles the read-back stack the streaming data loop needs:
    # datasets + pandas + pyarrow (parquet streaming) + av + torchcodec
    # (remote video decode for StreamingLeRobotDataset / StreamingDatasetReader).
    # Declaring it here makes `sim.stream_dataset(...)` work out of the box
    # instead of pushing torchcodec/av plumbing onto user code. See
    # reports/STREAMING_DATA_LOOP_DEEP_DIVE.md Appendix C.
    "lerobot[feetech,dataset]>=0.5.0,<0.6.0",
    # torchcodec wheels are built against a specific torch C++ ABI, so the
    # version MUST track the resolved torch:
    #   torch 2.9  -> torchcodec 0.7
    #   torch 2.10 -> torchcodec 0.10  (verified working on macOS arm64 +
    #                 system ffmpeg via /opt/homebrew/lib; 0.10 == "system-wide
    #                 ffmpeg support" per lerobot's matrix note)
    #   torch 2.11 -> torchcodec 0.11   torch 2.12 -> torchcodec 0.12
    # lerobot's own marker only special-cases aarch64; on macOS arm64 a plain
    # `pip install strands-robots[lerobot]` resolves torch 2.10, which needs
    # torchcodec 0.10 (0.7/0.8 mismatch the c10 ABI -> dlopen "Symbol not found:
    # c10::MessageLogger"). Pin the matching minor on darwin arm64 so video
    # streaming read-back works without manual intervention.
    "torchcodec>=0.10,<0.11; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # #378: lerobot 0.5.1's pyav video fallback calls torchvision.io.VideoReader,
    # which torchvision 0.26 (resolved on linux+aarch64 via the torch 2.11 Thor
    # override below) removed -- crashing dataset video read-back. lerobot's own
    # torchcodec dependency marker EXCLUDES aarch64, so a `pip install
    # strands-robots[lerobot]` on Thor/Jetson gets no decoder. Add torchcodec
    # explicitly on linux+aarch64 so lerobot uses its preferred (working)
    # torchcodec decoder instead of the removed VideoReader. (The hatch dev env
    # carries the same pin; this makes the public extra self-sufficient too.)
    # NOTE: torchcodec ships as +cuXXX wheels resolved by UV_TORCH_BACKEND; a
    # plain `pip install` on Thor may need the matching CUDA index -- see the
    # README Installation section for the Thor/Jetson caveat.
    "torchcodec>=0.11; platform_machine == 'aarch64' and sys_platform == 'linux'",
]
# MolmoAct2 transformers-native VLA (e.g. allenai/MolmoAct2-SO100_101). The
# MolmoAct2Policy class shipped in lerobot AFTER the 0.5.1 PyPI release (merged
# in lerobot PR #3604), so a plain `pip install strands-robots[lerobot]`
# resolves lerobot 0.5.1, which lacks it. Until a lerobot release that contains
# the PR lands on PyPI, install lerobot FROM SOURCE alongside this extra:
#   uv pip install strands-robots[molmoact2] \
#       'lerobot[feetech] @ git+https://github.com/huggingface/lerobot.git'
# PyPI rejects direct git URLs in a published package's dependency table, so the
# git pin lives in the install command (same pattern as cosmos3-diffusers), not
# here. This extra layers the auxiliary deps MolmoAct2's modeling/processor code
# needs on top of lerobot core -- transformers (Qwen2Tokenizer + the sharded
# safetensors loader), peft, scipy -- mirroring lerobot's own [molmoact2] extra.
# Once a tagged lerobot >= 0.5.2 is on PyPI, the first entry can pin
# `lerobot[feetech]>=0.5.2` directly and the git-source step drops away.
molmoact2 = [
    "strands-robots[lerobot]",
    # Mirror lerobot's own [molmoact2] dep pins exactly. The transformers
    # floor MUST match lerobot[transformers-dep] (>=5.4.0,<5.6.0): MolmoAct2's
    # modeling/processor code uses transformers 5.4+ APIs, and a looser floor
    # (e.g. >=4.46) lets a resolver pick an incompatible transformers that
    # imports fine -- passing the importability guard in molmoact2.build_policy
    # -- then dead-ends deep inside lerobot model construction.
    "transformers>=5.4.0,<5.6.0",
    "peft>=0.18.0,<1.0.0",
    "scipy>=1.14.0,<2.0.0",
]
sim = [
    "robot_descriptions>=1.11.0,<2.0.0",
]
sim-mujoco = [
    "strands-robots[sim]",
    "mujoco>=3.2.0,<4.0.0",
    "imageio>=2.28.0,<3.0.0",
    "imageio-ffmpeg>=0.4.0,<1.0.0",
]
# Newton GPU-native backend (newton-physics/newton on NVIDIA Warp +
# MuJoCo-Warp). GPU-batched parallel envs, headless ray-traced rendering, and
# the same MJCF assets as the MuJoCo backend. Requires an NVIDIA GPU (Maxwell+,
# driver 545+, CUDA 12); on CPU-only hosts Warp falls back to the CPU device.
# trimesh loads the collision/visual meshes referenced by the MJCF assets;
# mujoco-warp provides the GPU MuJoCo solver used by the default `solver`.
sim-newton = [
    "strands-robots[sim-mujoco]",
    "newton>=1.3.0,<2.0.0",
    "warp-lang>=1.14.0,<2.0.0",
    "mujoco-warp>=3.8.0",
    "trimesh>=4.0.0,<5.0.0",
]
benchmark-libero = [
    "libero>=0.1.0,<1.0.0",
]
mesh = [
    "eclipse-zenoh>=1.0.0,<2.0.0",
    "json5>=0.9.0,<1.0.0",
]
# AWS IoT Core integration for the mesh - MQTT5/mTLS transport, Device
# Shadow mirror, S3 camera offload, account-wide bootstrap (Rules /
# Lambda / DynamoDB / Fleet Provisioning template). Requires:
#   * awsiotsdk (high-level MQTT5 + mTLS client builder)
#   * awscrt    (low-level CRT runtime; pulled in by awsiotsdk but pinned
#                here for transitive predictability)
#   * boto3     (used for IoT control-plane provisioning + S3 frame upload)
mesh-iot = [
    "strands-robots[mesh]",
    "awsiotsdk>=1.21.0,<2.0.0",
    "awscrt>=0.20.0,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
]
# Device Connect - device-aware networking layer (discovery, RPC, events,
# safety). The primary transport in server mode; when this extra is not
# installed, robot_mesh() falls back to the built-in Zenoh mesh.
device-connect = [
    "device-connect-edge>=0.2.0",
    "device-connect-agent-tools>=0.1.0",
]
# ROS 2 bridge for the use_ros tool (strands_robots/tools/use_ros.py). The tool
# runs entirely in-process through rclpy - no `ros2` CLI shelling, no docker. It
# needs `rclpy` + `rosidl_runtime_py` importable in the interpreter, which means
# a sourced system ROS 2 distro (e.g. `source /opt/ros/jazzy/setup.bash`).
# Those core client libraries are NOT distributed on PyPI - they ship with the
# system ROS 2 install (apt / RoboStack / conda) and cannot be `pip install`ed.
# So, like the [curobo] extra, this stays minimal: it pulls only the
# pip-installable cyclonedds Python binding (a DDS RMW rclpy can use). Installing
# this extra does NOT by itself provision ROS 2 - source a real distro first.
ros2 = [
    "cyclonedds>=0.10.2,<1.0.0",
]
vera = [
    "vera @ git+https://github.com/sizhe-li/VERA.git",
    "websockets>=14",
    "msgpack>=1",
    "numpy>=1.24",
]
vera-sim = [
    "gymnasium==0.29.1",
    "gym-pusht==0.1.5",
    "robomimic==0.5.0",
    "robosuite==1.4.1",
    "mimicgen==1.0.0",
    "mujoco>=3.5.0",
    "imageio",
]
all = [
    "strands-robots[groot-service]",
    "strands-robots[moveit2]",
    "strands-robots[lerobot]",
    "strands-robots[sim-mujoco]",
    "strands-robots[mesh]",
    "strands-robots[mesh-iot]",
    "strands-robots[device-connect]",
    "strands-robots[wbc]",
    "strands-robots[molmoact2]",
]
dev = [
    "pytest>=6.0,<10.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
]

[project.scripts]
strands-robots = "strands_robots.__main__:main"

[project.urls]
Homepage = "https://github.com/strands-labs/robots"
Documentation = "https://github.com/strands-labs/robots#readme"
Repository = "https://github.com/strands-labs/robots.git"
Issues = "https://github.com/strands-labs/robots/issues"
Changelog = "https://github.com/strands-labs/robots/releases"

[tool.hatch.metadata]
allow-direct-references = true  # VERA is a git-only dependency (see the 'vera' extra)

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["strands_robots"]

[tool.hatch.envs.default]
installer = "uv"
features = ["all"]
dependencies = [
    "pytest>=6.0,<10.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "Pillow>=8.0.0,<13.0.0",
    "requests>=2.28.0,<3.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "pyzmq>=27.0.0,<28.0.0",
    # mink (differential IK) for the Cosmos 3 sim-loop bridge regression test
    # (tests/policies/cosmos3/test_sim_ik.py); the cosmos3-sim extra is not in
    # `features=all`, so pull it into the dev env explicitly. mujoco comes from
    # sim-mujoco (already in `all`).
    "mink>=0.0.4",
    "qpsolvers[quadprog]>=4.0.0",
    # torchvision 0.26 (from the aarch64 torch>=2.11 override below) removed
    # torchvision.io.VideoReader, which lerobot 0.5.1's pyav fallback still calls,
    # crashing dataset video read-back. lerobot's torchcodec dep marker EXCLUDES
    # aarch64, so add torchcodec explicitly on linux+aarch64 -> lerobot uses its
    # preferred (working) torchcodec decoder instead of the removed VideoReader.
    "torchcodec>=0.7; platform_machine == 'aarch64' and sys_platform == 'linux'",
]

# ---------------------------------------------------------------------------
# torch 2.11 override for NVIDIA Thor / Jetson (linux + aarch64).
#
# The PyPI torch 2.10.0 aarch64 build has a bug in its sm_110 (Thor, compute
# capability 11.0) cuBLAS call path: every cublasSgemm returns
# CUBLAS_STATUS_INVALID_VALUE, so real policy inference crashes even though
# torch.cuda.is_available() is True. This is fixed in torch 2.11 (verified on
# NVIDIA Thor: native cuBLAS matmul + lerobot ACTPolicy inference both work).
#
# lerobot 0.5.1 declares torch<2.11 / torchvision<0.26, but that cap is
# conservative -- lerobot 0.5.1 imports and runs ACTPolicy fine on torch 2.11
# (empirically verified). We override the cap ONLY on linux+aarch64 so x86_64
# and macOS keep lerobot's resolved versions untouched.
#
# Paired with UV_TORCH_BACKEND=auto above, a Thor `hatch env` resolves
# torch==2.11.x+cu130 / torchvision==0.26.x+cu130 and inference runs on GPU
# with no shim or LD_PRELOAD workaround.
[tool.uv]
override-dependencies = [
    # On NVIDIA Thor/Jetson (linux+aarch64) bump torch past lerobot's <2.11 cap
    # (2.11 fixes the sm_110 cuBLAS bug). On every OTHER platform, mirror
    # lerobot's own bound so x86/macOS resolve the same torch they would
    # WITHOUT this override. NOTE: a uv override-dependency for `torch` with
    # ONLY an aarch64 marker REMOVES torch from non-aarch64 resolutions
    # entirely (proven: x86 resolved no torch -> tests/conftest.py installed
    # the numpy mock -> bfloat16 failures). The complementary marker is
    # mandatory, not cosmetic.
    "torch>=2.11,<2.12; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "torch>=2.2,<2.11; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "torchvision>=0.26,<0.27; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "torchvision<0.26; platform_machine != 'aarch64' or sys_platform != 'linux'",
    # SECURITY: lerobot 0.5.1 transitively caps diffusers <0.36.0, which pins
    # the resolution to 0.35.2 -- vulnerable to GHSA trust_remote_code bypass
    # + TOCTOU RCE (fixed in 0.38.0). diffusers is only exercised by the
    # cosmos3-diffusers extra (Cosmos3Policy backend="diffusers"); lerobot core
    # does not import diffusers at runtime, so forcing >=0.38 past lerobot's
    # conservative cap is safe and clears the Dependabot alerts.
    "diffusers>=0.38.0",
]

# Auto-select the right PyTorch wheel for the host accelerator. On NVIDIA
# Thor / Jetson (linux + aarch64) the plain-PyPI torch wheel is CPU-ONLY, so
# torch.cuda.is_available() is False and all inference silently runs on CPU.
# "auto" makes uv probe the local driver/SoC and resolve the matching build
# (e.g. +cu130 on Thor) WITHOUT changing the pinned version.
#
# IMPORTANT: uv's "auto" detection is HOST-based, not target-platform based.
# If "auto" is hardcoded here it contaminates EVERY resolution -- including
# x86 CI -- with the build host's CUDA variant. On a Thor that means x86 CI
# resolves +cu130 wheels (proven: `uv pip compile --python-platform
# x86_64-unknown-linux-gnu` yields torchcodec==0.10.0+cu130), which cannot
# import on the GPU-less runner, so tests/conftest.py silently falls back to
# the numpy torch mock and torch-dependent tests break.
#
# So we INHERIT the value from the process env and only DEFAULT to "auto":
#   - Thor/Jetson dev: nothing set -> "auto" -> GPU wheels.
#   - x86 CI: workflow exports UV_TORCH_BACKEND=cpu -> CPU wheels, importable.
# A hatch pyproject env-var normally OVERRIDES the process env; the
# {env:VAR:default} form is what lets the process value win.
[tool.hatch.envs.default.env-vars]
UV_TORCH_BACKEND = "{env:UV_TORCH_BACKEND:auto}"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-integ = "pytest tests_integ/ -v --timeout=300 {args}"
lint = ["ruff check strands_robots tests tests_integ", "ruff format --check strands_robots tests tests_integ", "mypy strands_robots tests tests_integ"]
format = ["ruff check --fix strands_robots tests tests_integ", "ruff format strands_robots tests tests_integ"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["strands_robots"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
# The VERA docker/ scripts run INSIDE the strands-vera-server container
# (they import vera / torchmetrics / omegaconf, present only in that image),
# so exclude them from the host-side mypy run.
exclude = "strands_robots/policies/vera/docker/"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false

# Third-party libs without type stubs
[[tool.mypy.overrides]]
module = ["lerobot.*", "gr00t.*", "draccus.*", "msgpack.*", "websockets", "websockets.*", "zmq.*", "huggingface_hub.*", "serial.*", "psutil.*", "torch.*", "torchvision.*", "transformers.*", "einops.*", "robot_descriptions.*", "mujoco.*", "imageio.*", "libero.*", "zenoh.*", "boto3", "boto3.*", "awscrt", "awscrt.*", "awsiot", "awsiot.*", "botocore.*", "strands_robots.policies.cosmos3._msgpack_numpy", "diffusers", "diffusers.*", "accelerate", "accelerate.*", "openpi_client", "openpi_client.*", "openpi_server", "openpi_server.*", "openpi", "openpi.*", "device_connect_edge", "device_connect_edge.*", "device_connect_agent_tools", "device_connect_agent_tools.*", "rclpy", "rclpy.*", "rosidl_runtime_py", "rosidl_runtime_py.*", "moveit", "moveit.*", "moveit_configs_utils", "moveit_configs_utils.*", "geometry_msgs", "geometry_msgs.*", "mink", "mink.*", "qpsolvers", "qpsolvers.*", "onnxruntime", "onnxruntime.*"]
ignore_missing_imports = true

# Device Connect drivers - thin wrappers over the untyped device_connect_edge
# SDK; their RPC handlers return dicts that bubble Any (same posture as tools.*).
# disallow_untyped_defs stays relaxed because the SDK's @rpc/@emit/@on
# decorators are themselves untyped (they make decorated methods "untyped" to
# mypy, which the global config cannot see through). disallow_any_generics is
# enabled to keep the public dict/list/Callable surfaces fully parameterized
# rather than silently bare (which a developer's IDE/strict mypy would flag).
[[tool.mypy.overrides]]
module = ["strands_robots.device_connect.*"]
disallow_untyped_defs = false
disallow_any_generics = true
warn_return_any = false

# @tool decorator injects runtime signatures mypy cannot check
[[tool.mypy.overrides]]
module = ["strands_robots.tools.*"]
disallow_untyped_defs = false
warn_return_any = false
ignore_missing_imports = true

# LeRobot local policy uses dynamic attr access via draccus PreTrainedConfig
[[tool.mypy.overrides]]
module = ["strands_robots.policies.*"]
warn_return_any = false
disallow_untyped_defs = false

# Robot core - complex dynamic assembly, optional deps
[[tool.mypy.overrides]]
module = ["strands_robots.robot"]
disallow_untyped_defs = false
warn_return_any = false

# __init__.py has lazy import helpers
[[tool.mypy.overrides]]
module = ["strands_robots.__init__"]
disallow_untyped_defs = false

# AWS IoT bootstrap modules - boto3 always returns Any from API calls.
# We type the public surface explicitly (ProvisionedThing, BootstrappedAccount)
# but the internal helpers naturally bubble Any from boto3.
[[tool.mypy.overrides]]
module = ["strands_robots.mesh.iot.*", "strands_robots.mesh.transport.iot_transport"]
warn_return_any = false

# Registry modules - dynamic JSON loading returns Any
[[tool.mypy.overrides]]
module = ["strands_robots.registry.*"]
warn_return_any = false
disallow_untyped_defs = false

# MuJoCo simulation - mixins use cooperative self._world patterns
# attr-defined: Mixins access self._world/self._lock/etc. from Simulation (cooperative pattern)
# assignment: PEP 484 implicit Optional (= None on typed params)
# override: Subclass signatures extend base with extra params (orientation, mesh_path)
# misc: Multiple inheritance method resolution conflicts between mixin + ABC
[[tool.mypy.overrides]]
module = ["strands_robots.simulation.mujoco.*"]
disallow_untyped_defs = false
warn_return_any = false

# Async utils and dataset recorder - thin wrappers with dynamic types
[[tool.mypy.overrides]]
module = ["strands_robots._async_utils", "strands_robots.dataset_recorder"]
disallow_untyped_defs = false
warn_return_any = false

# Test files - relaxed type checking for mocks, fixtures, and test utilities
[[tool.mypy.overrides]]
module = ["tests.*", "tests_integ.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=strands_robots --cov-report=term-missing --strict-markers --timeout=120"
markers = [
    "gpu: requires CUDA GPU and real model weights (run with: pytest -m gpu)",
    "slow: long-running test (deselect with: pytest -m 'not slow')",
    "integration: requires live Device Connect infra (Zenoh router + etcd via Docker); skipped unless DEVICE_CONNECT_ALLOW_INSECURE is set (deselect with: pytest -m 'not integration')",
    "moveit2: requires a running MoveIt2 sidecar (ROS 2 / moveit_py). Run with: pytest -m moveit2",
    "curobo: requires NVIDIA cuRobo + a CUDA-capable GPU. Run with: pytest -m curobo (set CUROBO_LIVE=1)",
    "wbc: requires onnxruntime + a downloaded GR00T-WBC (SONIC) checkpoint + mujoco. Run with: pytest -m wbc (set WBC_LIVE=1)",
    "molmoact2: requires lerobot >= 0.5.2 (from source) + the [molmoact2] extra (transformers, peft, scipy). Run with: pytest -m molmoact2",
]
